--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,14 @@
+2009-08-14  Bruno Haible  <bruno@clisp.org>
+
+	Use the gnulib module 'errno'.
+	* Makefile.am: Include Makefile.gnulib.
+	(ACLOCAL_AMFLAGS): Add -I gnulib-m4.
+	(EXTRA_DIST): Add gnulib-m4/gnulib-cache.m4.
+	(BUILT_SOURCES, noinst_LTLIBRARIES): New variables.
+	* configure.ac (AC_PREREQ): Require autoconf 2.59 or newer.
+	Invoke gl_EARLY, gl_INIT. Don't invoke gl_EOVERFLOW. Remove the alloca
+	tests.
+
 2009-08-10  Bruno Haible  <bruno@clisp.org>
 
 	* vasnprintf.c (DCHAR_SET): Undefine at the end.
