--- a/gettext-tools/m4/ChangeLog
+++ b/gettext-tools/m4/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-15  Bruno Haible  <bruno@clisp.org>
+
+	Stop using gnulib module 'strdup'.
+	* libgrep.m4 (gt_LIBGREP): Don't invoke gl_FUNC_STRDUP.
+
 2009-08-03  Bruno Haible  <bruno@clisp.org>
 
 	* setlocale.m4 (gt_SETLOCALE): Fix displayed message with
