--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,10 @@
+2009-08-16  Bruno Haible  <bruno@clisp.org>
+
+	* Makevars (MSGMERGE_OPTIONS): New variable.
+	* Makefile.in.in ($(POFILES), .nop.po-update): Use it when invoking
+	msgmerge.
+	Suggested by Guillem Jover <guillem@debian.org>.
+
 2009-07-28  Bruno Haible  <bruno@clisp.org>
 
 	* sk.po: Update from Marcel Telka <marcel@telka.sk>.
