--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-16  Bruno Haible  <bruno@clisp.org>
+
+	* hello-objc-gnustep/po/GNUmakefile: Apply 2004-01-17 changes to
+	hello-*/po/Makefile.am.
+
 2009-07-29  Bruno Haible  <bruno@clisp.org>
 
 	* po/lv.po: New file, from Rihards Priedītis <rprieditis@gmail.com>.
