--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,5 +1,10 @@
 2009-08-16  Bruno Haible  <bruno@clisp.org>
 
+	* hello-objc-gnustep/po/GNUmakefile: Apply part of 2005-02-07 changes
+	to hello-*/po/Makefile.am..
+
+2009-08-16  Bruno Haible  <bruno@clisp.org>
+
 	* hello-objc-gnustep/po/GNUmakefile: Apply 2004-01-17 changes to
 	hello-*/po/Makefile.am.
 
