--- a/gettext-tools/examples/po/af.po
+++ b/gettext-tools/examples/po/af.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gettext-examples-0.13.1\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
-"POT-Creation-Date: 2007-10-18 03:08+0200\n"
+"POT-Creation-Date: 2009-08-16 12:22+0200\n"
 "PO-Revision-Date: 2003-12-31 10:30+2\n"
 "Last-Translator: Ysbeer <ysbeer@af.org.za>\n"
 "Language-Team: Afrikaans <i18n@af.org.za>\n"
+"Language: af\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
