--- a/gettext-tools/examples/po/es.po
+++ b/gettext-tools/examples/po/es.po
@@ -6,10 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gettext-examples-0.14\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
-"POT-Creation-Date: 2007-10-18 03:08+0200\n"
+"POT-Creation-Date: 2009-08-16 12:22+0200\n"
 "PO-Revision-Date: 2004-01-29 13:59-0600\n"
 "Last-Translator: Max de Mendizábal <max@upn.mx>\n"
 "Language-Team: Spanish <es@li.org>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
