--- a/gettext-tools/examples/po/fi.po
+++ b/gettext-tools/examples/po/fi.po
@@ -6,10 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gettext-examples 0.16.2-pre5\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
-"POT-Creation-Date: 2007-10-18 03:08+0200\n"
+"POT-Creation-Date: 2009-08-16 12:22+0200\n"
 "PO-Revision-Date: 2007-10-20 23:42+0300\n"
 "Last-Translator: Lauri Nurmi <lanurmi@iki.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
+"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
