--- a/gettext-tools/examples/po/sv.po
+++ b/gettext-tools/examples/po/sv.po
@@ -6,10 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gettext-examples 0.15-pre5\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
-"POT-Creation-Date: 2007-10-18 03:08+0200\n"
+"POT-Creation-Date: 2009-08-16 12:22+0200\n"
 "PO-Revision-Date: 2006-07-04 12:39+0200\n"
 "Last-Translator: Jan Djärv <jan.h.d@swipnet.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
