--- a/gettext-tools/examples/po/tr.po
+++ b/gettext-tools/examples/po/tr.po
@@ -6,10 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gettext-examples 0.14-pre1\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
-"POT-Creation-Date: 2007-10-18 03:08+0200\n"
+"POT-Creation-Date: 2009-08-16 12:22+0200\n"
 "PO-Revision-Date: 2004-01-21 06:17+0300\n"
 "Last-Translator: Nilgün Belma Bugüner <nilgun@superonline.com>\n"
 "Language-Team: Turkish <gnu-tr-u12a@lists.sourceforge.net>\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
