--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2009-08-16  Bruno Haible  <bruno@clisp.org>
+
+	Reduce dependency on project-id heuristic.
+	* msginit.c (project_id): Add header argument. Return first part of
+	Project-Id-Version field if present.
+	(fill_header): Update.
+
 2009-08-13  Bruno Haible  <bruno@clisp.org>
 
 	* msgexec.c: Include msgl-charset.h.
