--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-20  Eric Blake  <ebb9@byu.net>
+
+	* vasnprintf.c (decimal_point_char): Avoid warning on old-style
+	declaration.
+
 2009-08-10  Bruno Haible  <bruno@clisp.org>
 
 	* vasnprintf.c (DCHAR_SET): Undefine at the end.
