--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-20  Eric Blake  <ebb9@byu.net>
+
+	* vasnprintf.c (decimal_point_char): Avoid warning on old-style
+	declaration.
+
 2009-08-14  Bruno Haible  <bruno@clisp.org>
 
 	Use the gnulib module 'errno'.
