--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-08-30  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac (AC_PREREQ): Require at least autoconf 2.59.
+
 2009-08-15  Bruno Haible  <bruno@clisp.org>
 
 	Stop using gnulib module 'strdup'.
