--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-30  Bruno Haible  <bruno@clisp.org>
+
+	Fix a test failure on Solaris.
+	* msgexec-2 (TR): New variable.
+
 2009-08-15  Bruno Haible  <bruno@clisp.org>
 
 	* msgunfmt-tcl-1: Explain that this test fails on mingw.
