--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2009-09-05  Bruno Haible  <bruno@clisp.org>
+
+	* write-po.c (wrap): Remove unused initialization.
+	* x-glade.c (comment_handler): Likewise.
+	* xgettext.c (flag_context_list_table_insert): Add comment.
+	Found by clang's static analyzer.
+
 2009-08-30  Bruno Haible  <bruno@clisp.org>
 
 	Accommodate the Solaris iconv_open function, which cannot convert
