--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,10 @@
+2009-09-20  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (src/Makefile): Update recommendations for autoconf
+	versions >= 2.60.
+	Reported by Sylvain Beucler <beuc@gnu.org>
+	at <http://savannah.gnu.org/bugs/?27464>.
+
 2009-08-16  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (dist-html-split): Depend on gettext_toc.html.
