--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,10 @@
+2009-09-27  Bruno Haible  <bruno@clisp.org>
+
+	* add-to-archive: Use archive.cvs.tar.gz instead of archive.tar.gz.
+	* autopoint.in: Likewise.
+	* Makefile.am (archive.cvs.tar.gz): Renamed from archive.tar.gz.
+	(EXTRA_DIST, gettextsrc_DATA): Update.
+
 2009-08-14  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (archive.tar.gz): Update error message.
