--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-09-27  Bruno Haible  <bruno@clisp.org>
+
+	* NEWS: Mention configure options --without-cvs and --with-git.
+	* PACKAGING: Mention archive.*.tar.gz instead of archive.tar.gz.
+	* DEPENDENCIES: Mention also git.
+
 2009-09-01  Bruno Haible  <bruno@clisp.org>
 
 	* README.woe32: Put the -mno-cygwin option into CC and CXX.
