--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,9 @@
+2009-09-27  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: Accept --without-cvs, --with-git options. Substitute
+	ARCHIVE_FORMAT.
+	(AC_CONFIG_FILES): Add misc/convert-archive.
+
 2009-08-10  Bruno Haible  <bruno@clisp.org>
 
 	* woe32dll/gettextsrc-exports.c: Export formatstring_gfc_internal,
