--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,9 @@
 2009-09-27  Bruno Haible  <bruno@clisp.org>
 
+	* add-to-archive: Pass option -fPIC to gcc. Clean up cvsuser.so.
+
+2009-09-27  Bruno Haible  <bruno@clisp.org>
+
 	Support alternative to the cvs-compression of the archive.
 	* convert-archive.in: New file.
 	* autopoint.in (func_version): Show the archive format.
