--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -50,7 +50,7 @@
 
 2008-08-17  Bruno Haible  <bruno@clisp.org>
 
-	* gettextize.in (m4filelist): Add threadlib.m4 from the list.
+	* gettextize.in (m4filelist): Add threadlib.m4 to the list.
 	(func_version): Bump copyright year.
 
 2008-08-13  Sven Joachim  <svenjoac@gmx.de>
