--- a/gettext-tools/m4/ChangeLog
+++ b/gettext-tools/m4/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-18  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (aclocal_DATA): Add fcntl_h.m4.
+
 2009-08-15  Bruno Haible  <bruno@clisp.org>
 
 	Stop using gnulib module 'strdup'.
