--- a/HACKING
+++ b/HACKING
@@ -1,5 +1,5 @@
 All you need to know when hacking (modifying) GNU gettext or when building
-it off the CVS.
+it off the git repository.
 
 
 Requirements
