--- a/HACKING
+++ b/HACKING
@@ -63,11 +63,13 @@ You will need reasonably recent versions of the build tools:
 And, of course, the packages listed in the DEPENDENCIES file.
 
 
-Building off the CVS
-====================
+Building off the git repository
+===============================
 
-Access to the CVS is described at http://savannah.gnu.org/cvs/?group=gettext .
+Access to the git repository is described at
+  http://savannah.gnu.org/git/?group=gettext
 
-After fetching the sources from the CVS, peek at the comments in autogen.sh,
-then run "./autogen.sh"; then you can proceed with "./configure" as usual.
+After fetching the sources from the repository, peek at the comments in
+autogen.sh, then run "./autogen.sh"; then you can proceed with "./configure"
+as usual.
 
