--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,7 @@
+2009-11-30  Guido Flohr <guido@imperia.bg>
+
+	* Makefile.am (MOSTLYCLEANDIRS): New variable.
+
 2009-08-10  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (libgettextpo_la_AUXSOURCES): Add format-gfc-internal.c,
