--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-11  Bruno Haible  <bruno@clisp.org>
+
+	* config.charset: Untabify.
+
 2009-11-22  Bruno Haible  <bruno@clisp.org>
 
 	* vasnprintf.c (decimal_point_char): Choose the fast path also on
