--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,7 @@
+2009-10-10  Eric Blake  <ebb9@byu.net>
+
+	* relocatable.c (compute_curr_prefix): Fix spelling.
+
 2009-10-18  Bruno Haible  <bruno@clisp.org>
 
 	Avoid symlink attack in localcharset module.
