--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,7 @@
+2009-11-17  Eric Blake  <ebb9@byu.net>
+
+	* vasnprintf.c (VASNPRINTF): Avoid shadowing our own local variables.
+
 2009-08-20  Eric Blake  <ebb9@byu.net>
 
 	* vasnprintf.c (decimal_point_char): Avoid warning on old-style
