--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-22  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (decimal_point_char): Choose the fast path also on
+	MacOS X.
+
 2009-11-17  Eric Blake  <ebb9@byu.net>
 
 	* vasnprintf.c (VASNPRINTF): Avoid shadowing our own local variables.
