--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,9 @@
+2009-12-13  Bruno Haible  <bruno@clisp.org>
+
+	Avoid a test failure on MacOS X 10.5.
+	* lang-java: Make the test work when both locales fr_FR.ISO8859-1 and
+	fr_FR.UTF-8 exist.
+
 2009-12-12  Bruno Haible  <bruno@clisp.org>
 
 	* *.c: Untabify.
