--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-13  Bruno Haible  <bruno@clisp.org>
+
+	* localcharset.c (locale_charset): Fix comment about use of GetACP.
+
 2009-12-12  Bruno Haible  <bruno@clisp.org>
 
 	* localcharset.c (locale_charset): Add comment about use of GetACP.
