--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-13  Bruno Haible  <bruno@clisp.org>
+
+	* modules/html-ostream (Depends-on): Add xlist. Remove list.
+
 2009-12-12  Bruno Haible  <bruno@clisp.org>
 
 	* lib/*.h, lib/*.c: Untabify.
