--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-19  Bruno Haible  <bruno@clisp.org>
+
+	* ko.po: Update from Changwoo Ryu <cwryu@debian.org>.
+
 2009-08-16  Bruno Haible  <bruno@clisp.org>
 
 	* Makevars (MSGMERGE_OPTIONS): New variable.
