--- a/gettext-tools/examples/po/vi.po
+++ b/gettext-tools/examples/po/vi.po
@@ -1,22 +1,23 @@
 # Vietnamese Translation for Gettext Examples.
-# Copyright © 2005 Yoyodyne, Inc.
-# Copyright © 2007 Free Software Foundation, Inc.
-# Clytie Siddall <clytie@riverland.net.au>, 2005-2007.
+# Copyright © 2009 Yoyodyne, Inc. (msgids)
+# Copyright © 2009 Free Software Foundation, Inc.
+# This file is distributed under the same license as the gettext package.
+# Clytie Siddall <clytie@riverland.net.au>, 2005-2009.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gettext-examples 0.16.2-pre5\n"
+"Project-Id-Version: gettext-examples 0.17\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
 "POT-Creation-Date: 2009-08-16 12:22+0200\n"
-"PO-Revision-Date: 2007-10-17 16:27+0930\n"
+"PO-Revision-Date: 2009-09-24 22:37+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
-"Language-Team: Vietnamese <vi-VN@googlegroups.com> \n"
-"Language: \n"
+"Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
+"Language: vi\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: LocFactoryEditor 1.7b1\n"
+"X-Generator: LocFactoryEditor 1.8\n"
 
 #: hello-c/hello.c:30 hello-c-gnome/hello.c:46 hello-c++/hello.cc:39
 #: hello-c++-qt/hello.cc:45 hello-c++-kde/hellowindow.cc:42
