--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,11 @@
+2009-12-19  Bruno Haible  <bruno@clisp.org>
+
+	* po/ast.po: New file, from
+	Marcos Alvarez Costales <marcos.alvarez.costales@gmail.com>.
+	* po/LINGUAS: Add ast.
+	* hello-*/po/LINGUAS: Update.
+	* Makefile.am (EXAMPLESPOFILES): Add the new message catalogs.
+
 2009-08-16  Bruno Haible  <bruno@clisp.org>
 
 	Silence the msgmerge invocations.
