--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,8 @@
+2009-12-25  Bruno Haible  <bruno@clisp.org>
+
+	* gettextize.in (m4filelist): Add fcntl-o.m4 instead of fcntl_h.m4 to
+	the list.
+
 2009-12-12  Bruno Haible  <bruno@clisp.org>
 
 	* po-compat.el: Untabify.
