--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,5 +1,6 @@
-2009-12-13  Bruno Haible  <bruno@clisp.org>
+2009-12-25  Bruno Haible  <bruno@clisp.org>
 
+	* lib/html-ostream.oo.c: Include gl_xlist.h instead of gl_list.h.
 	* modules/html-ostream (Depends-on): Add xlist. Remove list.
 
 2009-12-12  Bruno Haible  <bruno@clisp.org>
