--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-26  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.in (localename.$lo): Add dependency.
+
 2009-12-21  Bruno Haible  <bruno@clisp.org>
 
 	Define override of setlocale and newlocale functions.
