--- a/gettext-runtime/NEWS
+++ b/gettext-runtime/NEWS
@@ -3,6 +3,9 @@ Version 0.18 - December 2009
 * On MacOS X and Windows systems, <libintl.h> now extends setlocale() and
   newlocale() so that their determination of the default locale considers
   the choice the user has made in the system control panels.
+
+* On MacOS X systems, the gettext()/dgettext()/... functions now respect the
+  locale of the current thread, if a thread-specific locale has been set.
 
 Version 0.16.1 - November 2006
 
