--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-26  Bruno Haible  <bruno@clisp.org>
+
+	* NEWS: Mention the use of the thread-specific locale on MacOS X.
+
 2009-12-25  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (distcheck-hook): Compare fcntl-o.m4 instead of
