--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,5 +1,9 @@
 2009-12-26  Bruno Haible  <bruno@clisp.org>
 
+	* intl.m4 (gt_INTL_SUBDIR_CORE): Don't check for NL_LOCALE_NAME macro.
+
+2009-12-26  Bruno Haible  <bruno@clisp.org>
+
 	* intl.m4 (gt_INTL_SUBDIR_CORE): Check also for uselocale.
 
 2009-12-25  Bruno Haible  <bruno@clisp.org>
