--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-12-26  Bruno Haible  <bruno@clisp.org>
 
+	* windows/gettext.rc: Update.
+
+2009-12-26  Bruno Haible  <bruno@clisp.org>
+
 	* NEWS: Mention the use of the thread-specific locale on MacOS X.
 
 2009-12-25  Bruno Haible  <bruno@clisp.org>
