--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-26  Bruno Haible  <bruno@clisp.org>
+
+	* libgettextpo.rc: Update.
+
 2009-12-12  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-po.h.in: Untabify.
