--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,8 @@
+2010-01-01  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (VASNPRINTF): If GNULIB_defined_mbstate_t is defined,
+	use wctomb instead of wcrtomb.
+
 2009-12-12  Bruno Haible  <bruno@clisp.org>
 
 	* *.h, *.c: Untabify.
