--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,11 @@
 2010-01-01  Bruno Haible  <bruno@clisp.org>
 
+	localename: Avoid gcc warning.
+	* localename.c (gl_locale_name_thread_unsafe): Don't define this
+	function if it is not used.
+
+2010-01-01  Bruno Haible  <bruno@clisp.org>
+
 	* vasnprintf.c (VASNPRINTF): If GNULIB_defined_mbstate_t is defined,
 	use wctomb instead of wcrtomb.
 
