--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,10 @@
+2010-01-31  Bruno Haible  <bruno@clisp.org>
+
+	* po/bg.po: New file, from Roumen Petrov <transl@roumenpetrov.info>.
+	* po/LINGUAS: Add bg.
+	* hello-*/po/LINGUAS: Update.
+	* Makefile.am (EXAMPLESPOFILES): Add the new message catalogs.
+
 2009-12-19  Bruno Haible  <bruno@clisp.org>
 
 	* po/ast.po: New file, from
