--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-07  Bruno Haible  <bruno@clisp.org>
+
+	* bg.po: New file, from Roumen Petrov <transl@roumenpetrov.info>.
+	* LINGUAS: Add bg.
+
 2009-12-19  Bruno Haible  <bruno@clisp.org>
 
 	* fi.po: Update from Lauri Nurmi <lanurmi@iki.fi>.
