--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -6207,7 +6207,9 @@ Languages with this property include:
 
 @table @asis
 @item Asian family
-Japanese, Korean, Vietnamese
+Japanese, @c   122.1 million speakers
+Vietnamese, @c  68.6 million speakers
+Korean @c       66.3 million speakers
 @end table
 
 @item Two forms, singular used for one only
@@ -6226,17 +6228,26 @@ Languages with this property include:
 
 @table @asis
 @item Germanic family
-Danish, Dutch, English, Faroese, German, Norwegian, Swedish
-@item Finno-Ugric family
-Estonian, Finnish
-@item Latin/Greek family
-Greek
-@item Semitic family
-Hebrew
+English, @c    328.0 million speakers
+German, @c      96.9 million speakers
+Dutch, @c       21.7 million speakers
+Swedish, @c      8.3 million speakers
+Danish, @c       5.6 million speakers
+Norwegian, @c    4.6 million speakers
+Faroese @c       0.05 million speakers
 @item Romanic family
-Italian, Portuguese, Spanish
+Spanish, @c    328.5 million speakers
+Portuguese, @c 178.0 million speakers - 163 million Brazilian Portuguese
+Italian @c      61.7 million speakers
+@item Latin/Greek family
+Greek @c        13.1 million speakers
+@item Finno-Ugric family
+Finnish, @c      5.0 million speakers
+Estonian @c      1.0 million speakers
+@item Semitic family
+Hebrew @c        5.3 million speakers
 @item Artificial
-Esperanto
+Esperanto @c       2 million speakers
 @end table
 
 @noindent
@@ -6244,9 +6255,9 @@ Other languages using the same header entry are:
 
 @table @asis
 @item Finno-Ugric family
-Hungarian
+Hungarian @c   12.5 million speakers
 @item Turkic/Altaic family
-Turkish
+Turkish @c     50.8 million speakers
 @end table
 
 Hungarian does not appear to have a plural if you look at sentences involving
@@ -6273,7 +6284,8 @@ Languages with this property include:
 
 @table @asis
 @item Romanic family
-French, Brazilian Portuguese
+Brazilian Portuguese, @c 163 million speakers
+French @c                 67.8 million speakers
 @end table
 
 @item Three forms, special case for zero
@@ -6288,7 +6300,7 @@ Languages with this property include:
 
 @table @asis
 @item Baltic family
-Latvian
+Latvian @c     1.5 million speakers
 @end table
 
 @item Three forms, special cases for one and two
@@ -6303,7 +6315,7 @@ Languages with this property include:
 
 @table @asis
 @item Celtic
-Gaeilge (Irish)
+Gaeilge (Irish) @c 0.4 million speakers
 @end table
 
 @item Three forms, special case for numbers ending in 00 or [2-9][0-9]
@@ -6319,7 +6331,7 @@ Languages with this property include:
 
 @table @asis
 @item Romanic family
-Romanian
+Romanian @c    23.4 million speakers
 @end table
 
 @item Three forms, special case for numbers ending in 1[2-9]
@@ -6336,7 +6348,7 @@ Languages with this property include:
 
 @table @asis
 @item Baltic family
-Lithuanian
+Lithuanian @c  3.2 million speakers
 @end table
 
 @item Three forms, special cases for numbers ending in 1 and 2, 3, 4, except those ending in 1[1-4]
@@ -6353,7 +6365,10 @@ Languages with this property include:
 
 @table @asis
 @item Slavic family
-Croatian, Serbian, Russian, Ukrainian
+Russian, @c    143.6 million speakers
+Ukrainian, @c   37.0 million speakers
+Serbian, @c      7.0 million speakers
+Croatian @c      5.5 million speakers
 @end table
 
 @item Three forms, special cases for 1 and 2, 3, 4
@@ -6369,7 +6384,8 @@ Languages with this property include:
 
 @table @asis
 @item Slavic family
-Slovak, Czech
+Czech, @c      9.5 million speakers
+Slovak @c      5.0 million speakers
 @end table
 
 @item Three forms, special case for one and some numbers ending in 2, 3, or 4
@@ -6386,7 +6402,7 @@ Languages with this property include:
 
 @table @asis
 @item Slavic family
-Polish
+Polish @c      40.0 million speakers
 @end table
 
 @item Four forms, special case for one and all numbers ending in 02, 03, or 04
@@ -6402,7 +6418,7 @@ Languages with this property include:
 
 @table @asis
 @item Slavic family
-Slovenian
+Slovenian @c   1.9 million speakers
 @end table
 @end table
 
