--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-20  Bruno Haible  <bruno@clisp.org>
+
+	* plural-table.c (plural_table): Sort in the same order as
+	gettext.texi.
+
 2010-02-17  Bruno Haible  <bruno@clisp.org>
 
 	Fix error in conversion of large PO file (> 4000 msgs) to Java class.
