--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,10 @@
 2010-02-20  Bruno Haible  <bruno@clisp.org>
 
+	* plural-table.c (plural_table): Add Bulgarian.
+	Reported by Roumen Petrov <transl@roumenpetrov.info>.
+
+2010-02-20  Bruno Haible  <bruno@clisp.org>
+
 	* plural-table.c (plural_table): Sort in the same order as
 	gettext.texi.
 
