--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,8 @@
+2013-04-17  Andreas Stricker  <astricker@futurelab.ch>
+
+	Support for JavaScript.
+	* woe32dll/gettextsrc-exports.c: Export formatstring_javascript.
+
 2013-04-15  Daiki Ueno  <ueno@gnu.org>
 
 	* woe32dll/gettextsrc-exports.c: Export formatstring_lua.
