--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2010-03-28  Bruno Haible  <bruno@clisp.org>
 
+	* NEWS: Deprecate the use of AM_GNU_GETTEXT with 'no-libtool' argument
+	and 'gettextize --intl'.
+
+2010-03-28  Bruno Haible  <bruno@clisp.org>
+
 	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC): Add fnmatch, remove
 	fnmatch-posix.
 
