--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,7 @@
 2010-03-31  Guido Flohr  <guido@imperia.net>
 
+	* x-perl.c (x_perl_prelex): Clarify interpolate_keywords arguments.
+
 	* x-perl.c (eaten_here): Renamed from here_eaten.
 	(phase1_getc, get_here_document, skip_pod, extract_perl): Update.
 
