--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,28 @@
 2010-03-31  Guido Flohr  <guido@imperia.net>
 
+	Improve how xgettext handles Perl syntax ambiguities.
+	* x-perl.c(enum token_type_ty): New enumeration items
+	token_type_number, token_type_object.
+	(struct token_ty): New field 'last_type'.
+	(token2string): Handle token_type_number, token_type_object.
+	(free_token): Likewise.
+	(prefer_division_over_regexp): Remove variable.
+	(extract_variable): Recognize token of type token_type_object.
+	(prefer_regexp_over_division): New function.
+	(last_token_type): Renamed from last_token.
+	(x_perl_prelex): Assign the token's last_type. Recognize token of type
+	token_type_number. Don't special-case "grep" and "split". Invoke
+	prefer_regexp_over_division for disambiguation.
+	(token_stack_dump): Handle token_type_number, token_type_object.
+	(x_perl_lex): Assign the token's last_type. Update last_token_type
+	intelligently.
+	(collect_message): Invoke prefer_regexp_over_division for
+	disambiguation.
+	(extract_balanced): Don't set last_token_type here. Handle
+	token_type_number, token_type_object.
+	(extract_perl): Initialize last_token_type here.
+	Reported by Guillem Jover <guillem@debian.org> via Santiago Vila.
+
 	* x-perl.c (x_perl_prelex): Clarify interpolate_keywords arguments.
 
 	* x-perl.c (eaten_here): Renamed from here_eaten.
