--- a/gettext-runtime/ChangeLog
+++ b/gettext-runtime/ChangeLog
@@ -1,3 +1,8 @@
+2010-04-02  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (ACLOCAL_AMFLAGS): Remove "-I ../autoconf-lib-link/m4"
+	option.
+
 2009-12-26  Bruno Haible  <bruno@clisp.org>
 
 	* NEWS: Mention the use of the thread-specific locale on MacOS X.
