--- a/gettext-tools/m4/ChangeLog
+++ b/gettext-tools/m4/ChangeLog
@@ -1,3 +1,8 @@
+2010-04-02  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (aclocal_DATA): Take lib-*.m4 from the
+	gettext-runtime/gnulib-m4/ directory.
+
 2009-12-25  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (aclocal_DATA): Add fcntl-o.m4. Remove fcntl_h.m4.
