Make the multithread modules work on Cygwin 1.7.2.

--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,9 @@
+2010-04-05  Bruno Haible  <bruno@clisp.org>
+
+	Make the multithread modules work on Cygwin 1.7.2.
+	* threadlib.m4 (gl_THREADLIB_BODY): Improve the test whether imported
+	symbols can be declared weak, so that it returns "no" on Cygwin 1.7.2.
+
 2010-03-28  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.m4 (AM_GNU_GETTEXT): Emit a warning if the first argument is
